--- a/style.css
+++ b/style.css
@@ -34,10 +34,14 @@ img {
 
 #top {
     
-    border-radius: 50%;
+    /*border-radius: 50%;
     text-align: center;
     margin: 1em;
-    padding:1.5em;
+    padding:1.5em;*/
+    width: 6.5em;
+    border-radius: 8px;
+    text-align: center;
+    margin-bottom: 1em;
     
     
     
@@ -81,6 +85,7 @@ footer {
     flex-direction:row;
     justify-content: space-around;
     align-items: center;
+    
     
     
     
