--- a/style.css
+++ b/style.css
@@ -26,10 +26,20 @@ nav a:hover {
 }
 main {
     background-image:url ("https://s3.reutersmedia.net/resources/r/?m=02&d=20191024&t=2&i=1444496701&r=LYNXMPEF9N0WP&w=940") ;
+    z-index: 1;
 }
 img {
     width: 100%;
     margin: auto 0;
+}
+
+#innerpic {
+    width: 15%;
+    height: 15%;
+    position: absolute;
+    left: 15px;
+    top:300px;
+    border-radius: 50%;
 }
 
 #top {
@@ -42,9 +52,13 @@ img {
     border-radius: 8px;
     text-align: center;
     margin-bottom: 1em;
+    padding-top: .6em;
+    padding-bottom: .6em; 
     
-    
-    
+}
+
+#brbee {
+    font-size: 40px;
 }
 .one {
     background-color: red;
@@ -91,6 +105,14 @@ footer {
     
     
 }
+
+/*#brbee {
+position: absolute;
+top: 15%;
+color: white;
+font-weight: bolder;
+}*/
+
 #bottom {
     display: inline-flex;
     background-color: rgb(33, 148, 148);
@@ -110,6 +132,16 @@ footer {
     color: #f2f2f2
 }
 @media screen and (max-width: 380px) {
+   
+   #bottom {
+       display: flex;
+       flex-direction: row;
+       justify-content: center
+       
+
+   }
+   
+   
     .first {
         width: 100%;
         text-align: center;
