--- a/style.css
+++ b/style.css
@@ -67,6 +67,7 @@ img {
 }
 .one {
     background-color: red;
+    /*background-image: url("https://media.istockphoto.com/photos/bee-picture-id474875198?k=6&m=474875198&s=612x612&w=0&h=CigG3gF6S2ijeO8qOmfMgHBOa_Fa-Cb2RugY-J2Hh9A=");*/
 }
 
 .two {
@@ -104,11 +105,6 @@ footer {
     flex-direction:row;
     justify-content: space-around;
     align-items: center;
-    
-    
-    
-    
-    
 }
 
 /*#brbee {
@@ -117,6 +113,10 @@ top: 15%;
 color: white;
 font-weight: bolder;
 }*/
+
+#article {
+    background-image: url("https://media.istockphoto.com/photos/bee-picture-id474875198?k=6&m=474875198&s=612x612&w=0&h=CigG3gF6S2ijeO8qOmfMgHBOa_Fa-Cb2RugY-J2Hh9A=");
+}
 
 #bottom {
     display: inline-flex;
@@ -198,6 +198,7 @@ font-weight: bolder;
 } 
 
 #article {
-    background-image: url ("https://wallpaperaccess.com/full/187161.jpg");
+    background-image: url "https://wallpaperaccess.com/full/187161.jpg";
+    
 }
 
