--- a/style.css
+++ b/style.css
@@ -25,7 +25,6 @@ nav a:hover {
     color: black;
 }
 main {
-    background-image:url ("https://s3.reutersmedia.net/resources/r/?m=02&d=20191024&t=2&i=1444496701&r=LYNXMPEF9N0WP&w=940") ;
     z-index: 1;
 }
 img {
@@ -34,7 +33,7 @@ img {
 }
 
 #innerpic {
-    width: 20%;
+    width: 15%;
     height: 15%;
     position: absolute;
     left: 15px;
@@ -114,7 +113,8 @@ color: white;
 font-weight: bolder;
 }*/
 
-#article {
+.container {
+   
     background-image: url("https://media.istockphoto.com/photos/bee-picture-id474875198?k=6&m=474875198&s=612x612&w=0&h=CigG3gF6S2ijeO8qOmfMgHBOa_Fa-Cb2RugY-J2Hh9A=");
 }
 
