--- a/style.css
+++ b/style.css
@@ -124,10 +124,11 @@ font-weight: bolder;
     border-radius: 5px;
 }
 .first {
-    width: 100%;
-    margin: auto 0;
+    width: 95%;
+    margin: 0 auto;
     color: #f2f2f2;
     padding-left:4px;
+    text-align: center;
     
 }
 .second {
@@ -143,7 +144,7 @@ font-weight: bolder;
 .fourth {
     width: 20%;
     color: orange;
-    text-weight:bold;
+    font-weight:bold;
     padding-left:3%;
     border: 3px solid orange;
     
