--- a/style.css
+++ b/style.css
@@ -62,6 +62,17 @@ img {
 #brbee {
     font-size: 40px;
 }
+
+.title {
+    position: absolute;
+    top: 3.95em;
+    left: 25%;
+    font-size:42px;
+    font-weight:bold;
+    color:white;
+
+}
+
 .one {
     background-color: red;
     /*background-image: url("https://media.istockphoto.com/photos/bee-picture-id474875198?k=6&m=474875198&s=612x612&w=0&h=CigG3gF6S2ijeO8qOmfMgHBOa_Fa-Cb2RugY-J2Hh9A=");*/
