--- a/style.css
+++ b/style.css
@@ -73,6 +73,13 @@ img {
 
 }
 
+.title p {
+    font-size: 18px;
+    margin-top: -50px;
+    margin-left: 10px;
+    font-weight: normal;
+}
+
 .one {
     background-color: red;
     /*background-image: url("https://media.istockphoto.com/photos/bee-picture-id474875198?k=6&m=474875198&s=612x612&w=0&h=CigG3gF6S2ijeO8qOmfMgHBOa_Fa-Cb2RugY-J2Hh9A=");*/
