--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ img {
     height: 75px;
     position: absolute;
     left: 15px;
-    top:300px;
+    top:200px;
     border-radius: 50%;
 }
 
@@ -61,7 +61,7 @@ img {
 
 .title {
     position: absolute;
-    top: 1em;
+    top: 1.55em;
     left: 25%;
     font-size:42px;
     font-weight:bold;
@@ -98,7 +98,7 @@ img {
 }
 
 .six {
-    background-color: black;
+    background-color: turquoise;
 }
 
 .seven {
@@ -116,6 +116,7 @@ footer {
     flex-direction:row;
     justify-content: space-around;
     align-items: center;
+    margin-top: 75px;
 }
 
 /*#brbee {
