--- a/style.css
+++ b/style.css
@@ -129,13 +129,16 @@ footer {
 .second {
     width:25%;
     color: #f2f2f2;
-    padding-left:3px
+    padding-left:3px;
+    border: 3px solid rgb(33, 148, 148);
+    
 }
 
 .third {
     width: 22%;
     color: #f2f2f2;
     padding-left: 3px;
+    border: 3px solid rgb(33, 148, 148);
 }
 
 .fourth {
