--- a/style.css
+++ b/style.css
@@ -44,10 +44,11 @@ img {
     width: 6.5em;
     border-radius: 11px;
     text-align: center;
+    margin-top: -1.25em;
     margin-bottom: 1em;
     margin-left:2px;
     margin-right:2px;
-    padding-top: .6em;
+    padding-top: .5em;
     padding-bottom: .6em;  
 }
 
